# FastAPI-like-a-Pro

./: .dockerignore  .env.docker  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  create_admin.py  create_frontend_user.py  create_test_user.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  generate_hash.py  pyproject.toml  test_api_login.py  test_auth.py  test_database.db  test_login_credentials.py  test_password.py  test_password_hash.py  test_password_verification.py
.github/workflows/: auto-pr.yml  tests.yml
fast_zero/: app.py  async_app.py  async_auth.py  async_services.py  auth.py  database.py  google_oauth.py  models.py  password_validator.py  schemas.py  security.py  services.py  settings.py
frontend/fastapi-frontend/: README.md  angular.json  package-lock.json  package.json
frontend/fastapi-frontend/src/: index.html  styles.scss
frontend/fastapi-frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/fastapi-frontend/src/app/core/guards/: auth.guard.ts
frontend/fastapi-frontend/src/app/core/interceptors/: auth.interceptor.ts  error.interceptor.ts  loading.interceptor.ts
frontend/fastapi-frontend/src/app/core/models/: auth.ts  user.ts
frontend/fastapi-frontend/src/app/core/services/: auth.service.ts  image.service.ts  notification.service.ts  user.service.ts
frontend/fastapi-frontend/src/app/features/auth/google-callback/: google-callback.component.ts
frontend/fastapi-frontend/src/app/features/auth/login/: login.component.html  login.component.scss  login.component.ts
frontend/fastapi-frontend/src/app/features/auth/register/: register.component.html  register.component.scss  register.component.ts
frontend/fastapi-frontend/src/app/features/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
frontend/fastapi-frontend/src/app/features/users/user-list/: user-list.component.html  user-list.component.scss  user-list.component.ts
frontend/fastapi-frontend/src/app/features/users/user-profile/: user-profile.component.html  user-profile.component.scss  user-profile.component.ts
frontend/fastapi-frontend/src/app/shared/components/background-image/: background-image.component.scss  background-image.component.ts
frontend/fastapi-frontend/src/app/shared/components/loading/: loading.component.html  loading.component.scss  loading.component.spec.ts  loading.component.ts
frontend/fastapi-frontend/src/app/shared/components/profile-image/: profile-image.component.scss  (+1 more)
init-db/: 01-init-test-db.sql
migrations/: env.py
migrations/versions/: 08fc1fe442c2_update_user_model_with_new_fields.py  0d37f7f69dfa_create_users_table.py  22ad58ddb58e_add_oauth_fields_to_user_model.py  46dcb60028bd_create_users_table.py
nginx/: nginx.conf
terraform/: .gitignore  Makefile  README.md  TROUBLESHOOTING.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/workflows/: auto-pr.yml  tests.yml
tests/: conftest.py  conftest_async.py  test_app.py  test_auth.py  test_db.py  test_google_oauth.py
(+9 files in other folders)
